# rust_http_server

./: Cargo.toml  README.md
public/: hello.html  index.html
src/: lib.rs  main.rs  server.rs  website_handler.rs
src/http/: method.rs  mod.rs  query_string.rs  request.rs  response.rs  status_code.rs
